--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vercel/blob": "^1.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@upstash/redis": "^1.34.8",
+    "@vercel/edge-config": "^1.4.0",
+    "dotenv": "^16.5.0",
     "new-component": "^6.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
