--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
+    "@radix-ui/themes": "^3.2.1",
     "@upstash/redis": "^1.34.8",
     "@vercel/edge-config": "^1.4.0",
+    "d3": "^7.9.0",
     "dotenv": "^16.5.0",
     "new-component": "^6.0.0",
     "react": "^19.0.0",
