--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.2.0",
     "@opentelemetry/api": "^1.9.0",
+    "@radix-ui/themes": "^3.2.1",
     "@upstash/redis": "^1.34.8",
     "@vercel/edge-config": "^1.4.0",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "new-component": "^6.0.0",
     "react": "^19.0.0",
